[project]
name = "ComfyUI_Custom_Switch"
description = "It allows you to control complex graphs by activating and bypassing entire groups of nodes from a single dropdown menu."
version = "1.0.1"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Custom_Switch"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "Custom Switch"
Icon = ""















