[project]
name = "ComfyUI_Custom_Switch"
description = "It allows you to control complex graphs by unbypass/unmute and bypass/mute entire groups of nodes, just by adding tags in the title of your nodes, no connection required."
version = "1.5.1"
license = { file = "LICENSE.txt" }

[project.urls]
Repository = "https://github.com/tritant/ComfyUI_Custom_Switch"

[tool.comfy]
PublisherId = "tritant"
DisplayName = "Custom Switch"
Icon = ""



























